Mejorar la accesibilidad y la usabilidad de la aplicación To-Do List al actualizar los identificadores y agregar prevención de eventos en el formulario de tareas. También se han realizado mejoras en el estilo para una mejor experiencia de usuario.

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
           <h2>To-Do List</h2>
         </div>
         <nav>
-          <a href="#add-task-form">Añadir Tarea</a>
+          <a href="#add-task">Añadir Tarea</a>
           <a href="#tasks">Ver Tareas Pendientes</a>
           <a href="#completed-tasks">Ver Tareas Completadas</a>
         </nav>
       </header>
 
       <main class="main-content">
-        <h1 class="title">Lista de Tareas</h1>
+        <h1 id="add-task" class="title">Lista de Tareas</h1>
 
         <form id="add-task-form">
           <input
